<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Selfie@NYP SIT</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_gallery">GalleryActivity</string>
    <string name="title_activity_view_photo">ViewPhotoActivity</string>
    <string name="title_activity_edit_photo">EditPhotoActivity</string>

    <!-- Activity titles -->
    <string name="ac_name_image_list">Image List Example</string>
    <string name="ac_name_image_grid">Image Grid Example</string>
    <string name="ac_name_image_pager">Image Pager Example</string>
    <string name="ac_name_image_gallery">Image Gallery Example</string>
    <string name="ac_name_complex">Complex Example</string>
    <!-- Labels -->
    <string name="label_examples">Examples</string>
    <string name="button_image_list">ListView</string>
    <string name="button_image_grid">GridView</string>
    <string name="button_image_pager">ViewPager</string>
    <string name="button_image_gallery">Gallery</string>
    <string name="button_list_and_grid">ViewPager (ListView + GridView)</string>
    <string name="title_list">List</string>
    <string name="title_grid">Grid</string>
    <string name="title_cameraderie">THIS APP</string>
    <string name="title_dcim">CAMERA</string>
    <string name="menu_item_clear_memory_cache">Clear memory cache</string>
    <string name="menu_item_clear_disc_cache">Clear disc cache</string>
    <string name="menu_item_pause_on_scroll">Pause on scroll</string>
    <string name="menu_item_pause_on_fling">Pause on fling</string>

    <!-- Content descriptions -->
    <string name="descr_image">Image</string>

    <!-- Alert Dialog -->
    <string name="delete_dialog_message">Do you want to delete the image?</string>
    <string name="delete_dialog_title">Delete confirmation</string>
    <string name="delete_dialog_positive">OK</string>
    <string name="delete_dialog_negative">Cancel</string>
    <string name="title_activity_tabbed_image">TabbedImageActivity</string>
    <string name="title_section1">Section 1</string>
    <string name="title_section2">Section 2</string>
    <string name="title_section3">Section 3</string>
    <string name="title_activity_share_dialog">ShareDialog</string>

    <!--LIVE APP ID-->
    <string name="app_id">1406218673005163</string>
    <string name="facebook_post_content_desc">Image to share</string>
    <string name="app_package_name">com.amuletxheart.cameraderie</string>
    <string name="success">Selfie@NYP SIT</string>
    <string name="successfully_posted_post">Successfully posted to Facebook</string>
    <string name="unable_to_post">You may not be connected to the internet</string>
    <string name="photo_post">Photo Post</string>
    <string name="ok">OK</string>
    <string name="error">Unable to post to Facebook</string>

    <string name="title_activity_facebook_share">Facebook</string>
    <string name="facebook_default_text">Please enter your text here</string>
    <string name="title_post_text">Write Post</string>
    <string name="post_button_text">Post</string>
    <string name="title_facebook_login">Facebook Login</string>

</resources>
