<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.amuletxheart.cameraderie.gallery">
    <item android:id="@+id/action_settings" android:title="@string/action_settings"
        android:orderInCategory="100" app:showAsAction="never" />

    <item
        android:id="@+id/item_clear_memory_cache"
        android:title="@string/menu_item_clear_memory_cache"/>
    <item
        android:id="@+id/item_clear_disc_cache"
        android:title="@string/menu_item_clear_disc_cache"/>
    <item
        android:id="@+id/item_pause_on_scroll"
        android:checkable="true"
        android:title="@string/menu_item_pause_on_scroll"
        android:visible="false"/>
    <item
        android:id="@+id/item_pause_on_fling"
        android:checkable="true"
        android:title="@string/menu_item_pause_on_fling"
        android:visible="false"/>
</menu>
